--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standard-version",
+  "name": "@tdio/standard-version",
   "version": "9.5.0",
   "description": "replacement for `npm version` with automatic CHANGELOG generation",
   "bin": "bin/cli.js",
@@ -18,7 +18,7 @@
   },
   "repository": "conventional-changelog/standard-version",
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "keywords": [
     "conventional-changelog",
@@ -50,7 +50,7 @@
     "git-semver-tags": "^4.0.0",
     "semver": "^7.1.1",
     "stringify-package": "^1.0.1",
-    "yargs": "^16.0.0"
+    "yargs": "^17.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
